<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".SendActivity">

    <TextView
        style="@style/MessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edtRemitente"
        android:text="@string/sender_prompt" />

    <EditText
        android:id="@+id/edtRemitente"
        style="@style/MessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_height" />

    <TextView
        style="@style/MessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edtMensaje"
        android:text="@string/user_msg" />

    <EditText
        android:id="@+id/edtMensaje"
        style="@style/MessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="@dimen/min_height" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans"
        android:text="@string/send_msg_button" />

</LinearLayout>
